trunk/Archive2/a8/bf0d53693d0ae4/output
+ g++-4.8 -O3 -Wall -Wextra -pedantic -Wconversion -std=c++1y main.cpp
main.cpp: In function 'int main()':
main.cpp:27:12: error: 'find_i' is not a member of 'std'
         if(std::find_i(Unique_Data.cbegin(), Unique_Data.cend(), 
            ^
